# lib/api-spec/openapi.yaml
@@ -925,6 +925,8 @@ components:
       properties:
         nickname:
           type: string
+        avatar:
+          type: string
       required:
         - nickname
 
@@ -947,6 +949,8 @@ components:
           type: boolean
         avatarColor:
           type: string
+        avatar:
+          type: string
         joinedAt:
           type: string
           format: date-time
@@ -959,6 +963,7 @@ components:
         - totalAnswers
         - isKicked
         - avatarColor
+        - avatar
         - joinedAt
 
     UpdatePlayerBody:
